# opentaimed

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: audit.yml  gitleaks.yml  publish.yml  smoke.yml  test.yml
docs/: security-review-2026-07.md
docs/adr/: 0001-tfda-dual-api-strategy.md  0002-mandatory-rules-server-instructions.md  0003-search-via-dataset37-not-lmspiq.md  0004-mit-license-with-clinical-disclaimer.md  0005-private-nested-repo-pattern.md  0006-flat-response-schema-alignment-with-healthcare-mcp-norms.md  0007-rx-otc-dual-format-full-fidelity.md  0008-multi-field-search-flat-filters.md  0009-distributed-install-data-freshness.md  0010-http-transport-hosting-model.md  0011-opt-in-package-insert-cache.md  0012-dataset37-over-ttl-blocking-refresh.md  0013-dataset42-drug-appearance.md  README.md  _template.md
taiwan-fda-mcp/: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
taiwan-fda-mcp/docs/: architecture.mmd
taiwan-fda-mcp/src/taiwan_fda_mcp/: __init__.py  coerce.py  config.py  exceptions.py  logging_config.py  mcp_server.py  models.py  resources.py  tool_responses.py  tools.py
taiwan-fda-mcp/src/taiwan_fda_mcp/sources/: license_code.py
taiwan-fda-mcp/src/taiwan_fda_mcp/sources/insert/: cache.py  client.py  html_text.py  parser.py  throttle.py
taiwan-fda-mcp/src/taiwan_fda_mcp/sources/opendata/: appearance_store.py  client.py  dataset37.py  dataset42.py  ingredient.py  search.py
taiwan-fda-mcp/tests/: conftest.py
taiwan-fda-mcp/tests/fixtures/: dataset37_ingredient_sample.json  dataset37_sample.json  getdrugdoc_otc_sample.xml  getdrugdoc_sample.xml
taiwan-fda-mcp/tests/integration/: test_appearance_live.py  test_live_smoke.py
taiwan-fda-mcp/tests/snapshots/: check_insert_updates.input.json  check_insert_updates.output.json  get_drug_appearance.input.json  get_drug_appearance.output.json  get_package_insert.input.json  get_package_insert.output.json  search_by_ingredient.input.json  search_by_ingredient.output.json  search_drugs.input.json  search_drugs.output.json
taiwan-fda-mcp/tests/unit/: test_appearance_store.py  test_coerce.py  test_config.py  test_dataset37.py  test_dataset42.py  test_html_text.py  test_ingredient.py  test_insert_cache.py  test_insert_client.py  test_insert_parser.py  test_insert_throttle.py  test_license_code.py  test_mcp_schemas.py  test_mcp_server.py  test_packaging.py  test_search.py  test_tools.py
