[project]
name = "taiwan-fda-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shin13", email = "soobahorn@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-json-logger>=4.1.0",
]

[project.scripts]
taiwan-fda-mcp-server = "taiwan_fda_mcp.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: unit tests (no network)",
    "integration: integration tests (real network)",
    "slow: slow tests",
]
addopts = "-m 'not integration'"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "S", "ASYNC", "PL", "PT", "TCH"]
ignore = ["E501", "S101", "PLR0913", "PLW0603"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.13"
reportMissingImports = "error"
reportUnusedImport = "warning"
