[project]
name = "taiwan-fda-mcp"
version = "0.2.1"
description = "MCP server exposing Taiwan FDA (TFDA) drug-license and package-insert data to LLM clients. Independent open-source wrapper; not a TFDA product."
readme = "README.md"
authors = [
    { name = "shin13", email = "soobahorn@gmail.com" }
]
license = { text = "MIT" }
keywords = ["mcp", "fda", "taiwan", "tfda", "drug-information", "package-insert", "仿單"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: Chinese (Traditional)",
    "Natural Language :: English",
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.3.1",
    "httpx>=0.28.1",
    "platformdirs>=4.9",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-json-logger>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/shin13/opentaimed"
Repository = "https://github.com/shin13/opentaimed"
Issues = "https://github.com/shin13/opentaimed/issues"
Changelog = "https://github.com/shin13/opentaimed/blob/main/CHANGELOG.md"

[project.scripts]
# Primary command matches the package name so `uvx taiwan-fda-mcp` works
# (uvx resolves a command to the package of the same name). The -server
# alias is kept for backward compatibility.
taiwan-fda-mcp = "taiwan_fda_mcp.mcp_server:main"
taiwan-fda-mcp-server = "taiwan_fda_mcp.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "unit: unit tests (no network)",
    "integration: integration tests (real network)",
    "slow: slow tests",
]
addopts = "-m 'not integration'"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "S", "ASYNC", "PL", "PT", "TCH"]
ignore = ["E501", "S101", "PLR0913", "PLW0603"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.13"
reportMissingImports = "error"
reportUnusedImport = "warning"
